tests/NormalTests/paczka1/small_fuzzy/68448436.err
Error in line 4: A648 S823 70,2
Error in line 10: Vlj4iX5sa S313 938,1
Error in line 9: VQJyCK2Un S313 47,9
